# BoolkaEngine2

./: .gitignore  .gitmodules  README.md
build_scripts/: build.ps1  clean.ps1  configure.ps1  dev_machine_setup.ps1  format.ps1  pre_commit.ps1  tidy.ps1  tidy_fix.ps1  tidy_fix_slow.ps1
source/: .clang-format  .clang-tidy  CMakeLists.txt
source/allocator/: CMakeLists.txt
source/allocator/private/: base_allocator.cpp  linear_allocator.cpp
source/allocator/public/: base_allocator.h  base_allocator.hpp  linear_allocator.h  linear_allocator.hpp
source/bootstrap/: CMakeLists.txt
source/bootstrap/private/: bootstrap.cpp
source/common/: CMakeLists.txt
source/common/public/: global_precompiled_header.h  helpers.h  math_vector.h
source/filesystem/: CMakeLists.txt
source/filesystem/private/: file_io.cpp  recursive_directory_iterator.cpp
source/filesystem/public/: file_io.h  recursive_directory_iterator.h
source/hardware_info/: CMakeLists.txt
source/hardware_info/private/: hardware_info.cpp
source/hardware_info/public/: hardware_info.h
source/memory_manager/: CMakeLists.txt
source/memory_manager/private/: memory_allocator.cpp  memory_api.cpp
source/memory_manager/public/: memory_allocator.h  memory_api.h  memory_block.h
source/render_graph/: CMakeLists.txt
source/render_graph/graph/global/: pso.rg  resources.rg  shaders.rg  textures.rg  variables.rg
source/render_graph/graph/z_pre_pass/: pass.rg
source/render_graph_parser/: .clang-tidy  CMakeLists.txt
source/render_graph_parser/private/: antlr4_helper.cpp  antlr4_helper.h  antlr4_helper.hpp  object_container.h  parser.cpp  parser_context.cpp  parser_context.h  render_graph.cpp  resource_parser.cpp  resource_parser.h
source/render_graph_parser/private/resources/: buffer_parser.cpp  buffer_parser.h  resource_format.cpp  resource_parser.cpp  resource_parser.h  texture1d_parser.cpp  texture1d_parser.h  texture2d_parser.cpp  texture2d_parser.h  texture3d_parser.cpp  texture3d_parser.h
source/render_graph_parser/private/shaders/: shader_parser.cpp  shader_parser.h  shader_type.cpp
source/render_graph_parser/private/variables/: variable_format.cpp  variable_parser.cpp  variable_parser.h  variable_update_frequency.cpp
source/render_graph_parser/public/: parser.h  render_graph.h  resource_container.h  resource_view_continer.h  variable.h
source/render_graph_parser/public/resources/: buffer.h  format.h  resource.h  resource_format.h  texture.h  texture1d.h  texture2d.h  texture3d.h  usage.h
source/render_graph_parser/public/shaders/: shader.h  shader_type.h
source/render_graph_parser/public/variables/: variable.h  variable_format.h  variable_update_frequency.h
source/render_graph_parser_generator/: CMakeLists.txt
source/render_graph_parser_generator/grammar/: common_lexer.g4  common_parser.g4  compute_pso_lexer.g4  compute_pso_parser.g4  graphic_pso_lexer.g4  graphic_pso_parser.g4  pso_lexer.g4  pso_parser.g4  render_graph_lexer.g4  render_graph_parser.g4  render_targets_config_lexer.g4  render_targets_config_parser.g4  resource_formats_lexer.g4  resource_formats_parser.g4  resource_lexer.g4  resource_parser.g4  shader_lexer.g4  shader_parser.g4  variable_lexer.g4  variable_parser.g4
source/render_graph_solver/: CMakeLists.txt
source/render_graph_solver/private/: render_graph_solver.cpp
source/render_graph_solver/public/: render_graph_solver.h
source/render_graph_solver_cmd/: CMakeLists.txt
source/render_graph_solver_cmd/private/: render_graph_solver_cmd.cpp
source/rg_parser/: CMakeLists.txt
source/rg_parser/private/: parser.cpp
source/rg_parser/public/: element.h  parser.h
source/task_system/: CMakeLists.txt
source/task_system/private/: task_system.cpp
source/task_system/public/: task.h  task_system.h
source/threading/: CMakeLists.txt
source/threading/private/: thread.cpp  thread_pool.cpp
source/threading/public/: precompiled_header.h  thread.h  thread_pool.h
source/work_graph_solver/: CMakeLists.txt
